modules/gdscript/tests/scripts/analyzer/errors/cyclic_ref_var_self.gd
var v1 = v1

func test():
	print(v1)
